changed the pom.xml